--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -588,7 +588,9 @@ Arbitrary <a href="https://www.w3.org/TR/2006/REC-xml11-20060816/">XML</a> data 
 
 <h4 id="basics-of-sorting">Basics of sorting</h4>
 
-<p>The API currently supports sorting by means of the <code class="prettyprint">sort</code> parameter.</p>
+<p>The API currently supports sorting by means of the <code class="prettyprint">sort</code> parameter. Sorting can be done using any field from the dataset, as well as <code class="prettyprint">user.name</code> and <code class="prettyprint">user.role</code>.</p>
+
+<p>Sorting by nested fields is not supported at the moment.</p>
 
 <blockquote>
 <p>Sorting datasets</p>
@@ -609,9 +611,14 @@ Arbitrary <a href="https://www.w3.org/TR/2006/REC-xml11-20060816/">XML</a> data 
 </blockquote>
 <pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/dataset?sort<span class="o">=</span>-name,+description
 </code></pre>
+<blockquote>
+<p>Sorting datasets by the role of the user who owns the dataset</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/dataset?sort<span class="o">=</span>user.role
+</code></pre>
 <h4 id="special-sorting-criteria">Special sorting criteria</h4>
 
-<p>There are four special sorting criteria:</p>
+<p>There are some criteria for special sorting in datasets:</p>
 
 <ul>
 <li><code class="prettyprint">metadata</code>: delegates sorting to the metadata component, sorting by the name field of the metadata.</li>
@@ -1512,7 +1519,7 @@ However, in some scenarios, it may be desirable to specify some or all of these 
 
 <p><strong>When a dataset is deleted the user&rsquo;s applications that were present on the dataset will be removed from it. If this results in a dataset without applications, the dataset itself will be then deleted.</strong></p>
 
-<p>Datasets can be deleted either by with role ADMIN or by the user with role MANAGER that created them. </p>
+<p>Datasets can be deleted either by with role ADMIN or by the user with role MANAGER that created them.</p>
 
 <p>In order to perform this operation, the following conditions must be met:</p>
 
@@ -1603,7 +1610,7 @@ original dataset&rsquo;s values when cloning:
 
 <ul>
 <li>The concatenate process relies on a slower approach to ensure the operation is atomic. Until the operation is completed, you will see the dataset data as it was before the concatenate operation was triggered. If the operation fails, the old version of the data is kept accessible as it was before the concatenation process was started. There&rsquo;s a known issue where concatenating new data to already existing large datasets may result in failure.</li>
-<li>The append operation relies on a faster process that does not offer atomicity. The new data is simply added to the current dataset, and any queries done while this process is taking place may produce results based on the preexisting data mixed with parts of the newly added values. Should the operation fail halfway, your dataset may contain all the preexisting records as well as part (but not all) of the newly added ones. </li>
+<li>The append operation relies on a faster process that does not offer atomicity. The new data is simply added to the current dataset, and any queries done while this process is taking place may produce results based on the preexisting data mixed with parts of the newly added values. Should the operation fail halfway, your dataset may contain all the preexisting records as well as part (but not all) of the newly added ones.</li>
 </ul>
 
 <blockquote>
@@ -1897,7 +1904,7 @@ original dataset&rsquo;s values when cloning:
 </code></pre>
 <h3 id="include-related-entities">Include related entities</h3>
 
-<p>When loading widget data, you can optionally pass an <code class="prettyprint">includes</code> query argument to load additional data. </p>
+<p>When loading widget data, you can optionally pass an <code class="prettyprint">includes</code> query argument to load additional data.</p>
 
 <h4 id="vocabulary">Vocabulary</h4>
 
@@ -2205,7 +2212,7 @@ Remember — <strong>the resulting list is filtered by env=production</strong> u
 </tbody></table>
 
 <aside class="notice">
-   Using `userId` filter will return widgets created/cloned by the user. This filter is not compatible with `favourite` or `collection`. 
+   Using `userId` filter will return widgets created/cloned by the user. This filter is not compatible with `favourite` or `collection`.
    If you want to fetch favourited widgets, or specific ones from a collection, do not include the `userId` param.
 </aside>
 
@@ -2281,9 +2288,39 @@ curl -X GET https://api.resourcewatch.org/v1/dataset/d02df2f6-d80c-4274-bb6f-f06
 </blockquote>
 <pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/widget?page[size]<span class="o">=</span>5&amp;page[number]<span class="o">=</span>2
 </code></pre>
+<h3 id="sorting">Sorting</h3>
+
+<p>The API currently supports sorting by means of the <code class="prettyprint">sort</code> parameter. Sorting can be done using any field from the widget, as well as <code class="prettyprint">user.name</code> and <code class="prettyprint">user.role</code>.</p>
+
+<p>Sorting by nested fields is not supported at the moment.</p>
+
+<blockquote>
+<p>Sorting widgets</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/widget?sort<span class="o">=</span>name
+</code></pre>
+<p>Multiple sorting criteria can be used, separating them by commas.</p>
+
+<blockquote>
+<p>Sorting widgets by multiple criteria</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/widget?sort<span class="o">=</span>name,slug
+</code></pre>
+<p>You can specify the sorting order by prepending the criteria with either <code class="prettyprint">-</code> or <code class="prettyprint">+</code>. By default, <code class="prettyprint">asc</code> order is assumed.</p>
+
+<blockquote>
+<p>Explicit order of sorting</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/widget?sort<span class="o">=</span>-name,+slug
+</code></pre>
+<blockquote>
+<p>Sorting widgets by the role of the user who owns the widget</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/widget?sort<span class="o">=</span>user.role
+</code></pre>
 <h3 id="include-related-entities">Include related entities</h3>
 
-<p>When loading widget data, you can optionally pass an <code class="prettyprint">includes</code> query argument to load additional data. </p>
+<p>When loading widget data, you can optionally pass an <code class="prettyprint">includes</code> query argument to load additional data.</p>
 
 <h4 id="vocabulary">Vocabulary</h4>
 
@@ -2640,7 +2677,7 @@ Remember — the response is jsonapi format
 </tr>
 </tbody></table>
 
-<p>It is possible to create a widget that has a different <code class="prettyprint">env</code> property to its parent dataset. </p>
+<p>It is possible to create a widget that has a different <code class="prettyprint">env</code> property to its parent dataset.</p>
 
 <blockquote>
 <p>To create a widget, you have to do a POST request with the following body:</p>
@@ -3170,9 +3207,39 @@ curl -X GET https://api.resourcewatch.org/v1/dataset/11de2bc1-368b-42ed-a207-aaf
 </blockquote>
 <pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/layer?page[size]<span class="o">=</span>5&amp;page[number]<span class="o">=</span>2
 </code></pre>
+<h3 id="sorting">Sorting</h3>
+
+<p>The API currently supports sorting by means of the <code class="prettyprint">sort</code> parameter. Sorting can be done using any field from the layer, as well as <code class="prettyprint">user.name</code> and <code class="prettyprint">user.role</code>.</p>
+
+<p>Sorting by nested fields is not supported at the moment.</p>
+
+<blockquote>
+<p>Sorting layers</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/layer?sort<span class="o">=</span>name
+</code></pre>
+<p>Multiple sorting criteria can be used, separating them by commas.</p>
+
+<blockquote>
+<p>Sorting layers by multiple criteria</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/layer?sort<span class="o">=</span>name,slug
+</code></pre>
+<p>You can specify the sorting order by prepending the criteria with either <code class="prettyprint">-</code> or <code class="prettyprint">+</code>. By default, <code class="prettyprint">asc</code> order is assumed.</p>
+
+<blockquote>
+<p>Explicit order of sorting</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/layer?sort<span class="o">=</span>-name,+slug
+</code></pre>
+<blockquote>
+<p>Sorting layers by the role of the user who owns the layer</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/layer?sort<span class="o">=</span>user.role
+</code></pre>
 <h3 id="include-related-entities">Include related entities</h3>
 
-<p>When loading layer data, you can optionally pass an <code class="prettyprint">includes</code> query argument to load additional data. </p>
+<p>When loading layer data, you can optionally pass an <code class="prettyprint">includes</code> query argument to load additional data.</p>
 
 <h4 id="vocabulary">Vocabulary</h4>
 
@@ -3227,7 +3294,7 @@ curl -X GET https://api.resourcewatch.org/v1/dataset/11de2bc1-368b-42ed-a207-aaf
           </span><span class="p">},</span><span class="w">
           </span><span class="s2">"applicationConfig"</span><span class="p">:</span><span class="w"> </span><span class="p">{},</span><span class="w">
           </span><span class="s2">"staticImageConfig"</span><span class="p">:</span><span class="w"> </span><span class="p">{},</span><span class="w">
-          </span><span class="s2">"vocabulary"</span><span class="p">:</span><span class="w"> </span><span class="p">[]</span><span class="w">      
+          </span><span class="s2">"vocabulary"</span><span class="p">:</span><span class="w"> </span><span class="p">[]</span><span class="w">
         </span><span class="p">}</span><span class="w">
       </span><span class="p">}</span><span class="w">
    </span><span class="p">]</span><span class="w">
@@ -3465,7 +3532,7 @@ Remember — the response is jsonapi format
 </tr>
 </tbody></table>
 
-<p>It is possible to create a layer that has a different <code class="prettyprint">env</code> property to its parent dataset. </p>
+<p>It is possible to create a layer that has a different <code class="prettyprint">env</code> property to its parent dataset.</p>
 
 <blockquote>
 <p>To create a layer, you have to do a POST request with the following body:</p>
